tests/negative/typecheck/dyn_type.orng
// dyn_type.orng:6:20: error: not a trait
//     let x: &dyn Int = 4
//                   ^
// 
fn main() -> Int {
    let x: &dyn Int = 4
    5
}